kubeconfigs/web-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: events-web
spec: 
  selector:
    matchLabels:
      app: events-web
      ver: v1.0
  replicas: 3 # # tells deployment to run 1 pod matching the template
  template:
    metadata:
      labels:
        app: events-web
        ver: v1.0
    spec:
      containers:
      - name: events-web
        image: andbrig/events-website:v1.0
        ports:
        - containerPort: 8080
